// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToDo Components renders the Category Component 1`] = `
<div
  className="Body"
>
  <div
    className="todo-list"
  >
    <ul
      id="todo-holder"
    />
    <input
      id="todo-text-field"
      onChange={[Function]}
      placeholder="Write your TODO"
      type="text"
    />
    <input
      id="btn-green"
      onClick={[Function]}
      type="submit"
      value="Add"
    />
  </div>
</div>
`;

exports[`ToDo Components renders the CategoryItem Component 1`] = `
<li
  className="category-item"
>
  <input
    className="btn-category"
    onClick={undefined}
    style={
      Object {
        "backgroundColor": "undefined",
      }
    }
    type="submit"
    value=""
  />
</li>
`;

exports[`ToDo Components renders the ToDo Component 1`] = `
<div
  className="Body"
>
  <div
    className="todo-list"
  >
    <ul
      id="todo-holder"
    />
    <input
      id="todo-text-field"
      onChange={[Function]}
      placeholder="Write your TODO"
      type="text"
    />
    <input
      id="btn-green"
      onClick={[Function]}
      type="submit"
      value="Add"
    />
  </div>
</div>
`;

exports[`ToDo Components renders the ToDoItem Component 1`] = `
<li
  className="todo-item"
>
  <div
    className="category-todo"
    style={
      Object {
        "backgroundColor": "undefined",
      }
    }
  />
  <input
    className="todo-checkbox"
    label={false}
    onChange={[Function]}
    onClick={undefined}
    type="checkbox"
  />
  <p
    className="todo-text"
  />
</li>
`;

exports[`ToDo Overview renders the whole Todo application 1`] = `
<div
  className="NoteView"
>
  <div
    className="Left-Page"
  >
    <p>
      This is your TODO for now
    </p>
    <div>
      <div
        className="NoteHolder"
      >
        <p>
          <orange>
            Categories
          </orange>
           - Select to filter your notes and add new ones!
        </p>
        <div
          className="Notes"
        >
          <div
            className="CategoryFilter"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#016D91",
                "border": "none",
              }
            }
          />
          <div
            className="CategoryFilter"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#E53F6F",
                "border": "none",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="Middle-Page"
    >
      <div
        className="Body"
      >
        <div
          className="todo-list"
        >
          <ul
            id="todo-holder"
          />
          <input
            id="todo-text-field"
            onChange={[Function]}
            placeholder="Write your TODO"
            type="text"
          />
          <input
            id="btn-green"
            onClick={[Function]}
            type="submit"
            value="Add"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="Right-Page"
  >
    <div
      className="CategoryCreatorHolder"
    >
      <p>
        Categories
      </p>
      <div
        className="Category"
      >
        <div
          className="CategoryColor"
          style={
            Object {
              "backgroundColor": "#016D91",
            }
          }
        />
        <div>
          <input
            className="CategoryName"
            onChange={[Function]}
            value="Other"
          />
        </div>
      </div>
      <div
        className="Category"
      >
        <div
          className="CategoryColor"
          style={
            Object {
              "backgroundColor": "#E53F6F",
            }
          }
        />
        <div>
          <input
            className="CategoryName"
            onChange={[Function]}
            value="School"
          />
        </div>
      </div>
      <div
        className="AddCategory"
      >
        <button
          className="add-button"
          onClick={[Function]}
        >
          Add
        </button>
      </div>
    </div>
  </div>
</div>
`;
